syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service ApplicantEducation {
rpc GetApplicantEducation(IdRequest) returns (ApplicantEducationReply);
rpc GetApplicantEducations(google.protobuf.Empty) returns (ApplicantEducations);
rpc AddApplicantEducation(ApplicantEducations) returns (google.protobuf.Empty);
rpc UpdateApplicantEducation(ApplicantEducations) returns (google.protobuf.Empty);
rpc DeleteApplicantEducation(ApplicantEducations) returns (google.protobuf.Empty);
}

message ApplicantEducations {
repeated ApplicantEducationReply AppEdus = 1;
}
message IdRequest {
	string Id = 1;
}

message ApplicantEducationReply {
	string Id =1;
	string Applicant = 2;
	string Major =3;
	string CertificateDiploma = 4;
	google.protobuf.Timestamp StartDate = 5;
	google.protobuf.Timestamp CompletionDate = 6;
	sint32 CompletionPercent = 7;
	bytes TimeStamp = 8;

}